adicionando responsividade para celular

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,3 +79,10 @@ footer i {
     color: white;
 }
 
+@media (max-width: 576px) {
+    section {
+        width: 80%;
+        padding-top: 0;
+    }
+
+}
